HW10full